<resources>
    <string name="app_name">InteractiveLabPart2</string>
    <string name="team_a">Team A</string>
    <string name="zero">0</string>
    <string name="three_points">+3 POINTS</string>
    <string name="two_points">+2 POINTS</string>
    <string name="free_throw">FREE THROW</string>
    <string name="team_b">Team B</string>
    <string name="reset">RESET</string>
    <string name="Cheer_team">YAY TEAM</string>
</resources>