<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/team_a_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/team_a"
            android:textColor="#616161"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/team_a_score_textView"
            app:layout_constraintEnd_toStartOf="@+id/line_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/team_a_score_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/zero"
            android:textColor="#000000"
            android:textSize="56sp"
            app:layout_constraintEnd_toEndOf="@id/team_a_title_textView"
            app:layout_constraintStart_toStartOf="@id/team_a_title_textView"
            app:layout_constraintTop_toBottomOf="@id/team_a_title_textView" />

        <Button
            android:id="@+id/team_a_plus_three_pts_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/three_points"
            app:layout_constraintEnd_toStartOf="@+id/line_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team_a_score_textView" />

        <Button
            android:id="@+id/team_a_plus_two_pts_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/two_points"
            app:layout_constraintEnd_toEndOf="@id/team_a_plus_three_pts_button"
            app:layout_constraintStart_toStartOf="@id/team_a_plus_three_pts_button"
            app:layout_constraintTop_toBottomOf="@id/team_a_plus_three_pts_button" />

        <Button
            android:id="@+id/team_a_free_throw_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/free_throw"
            app:layout_constraintEnd_toEndOf="@id/team_a_plus_two_pts_button"
            app:layout_constraintStart_toStartOf="@id/team_a_plus_two_pts_button"
            app:layout_constraintTop_toBottomOf="@+id/team_a_plus_two_pts_button" />

        <View
            android:id="@+id/line_view"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/team_b_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/team_b"
            android:textColor="#616161"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/line_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/team_b_score_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/zero"
            android:textColor="#000000"
            android:textSize="56sp"
            app:layout_constraintEnd_toEndOf="@id/team_b_title_textview"
            app:layout_constraintStart_toStartOf="@id/team_b_title_textview"
            app:layout_constraintTop_toBottomOf="@id/team_b_title_textview" />

        <Button
            android:id="@+id/team_b_plus_three_pts_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/three_points"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/line_view"
            app:layout_constraintTop_toBottomOf="@id/team_b_score_textView" />

        <Button
            android:id="@+id/team_b_plus_two_pts_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/two_points"
            app:layout_constraintEnd_toEndOf="@id/team_b_plus_three_pts_button"
            app:layout_constraintStart_toStartOf="@id/team_b_plus_three_pts_button"
            app:layout_constraintTop_toBottomOf="@id/team_b_plus_three_pts_button" />

        <Button
            android:id="@+id/team_b_free_throw_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/free_throw"
            app:layout_constraintEnd_toEndOf="@id/team_b_plus_two_pts_button"
            app:layout_constraintStart_toStartOf="@id/team_b_plus_two_pts_button"
            app:layout_constraintTop_toBottomOf="@id/team_b_plus_two_pts_button" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".65" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>